# Algorithm

./: .gitignore  2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  4-1.cpp  4-2.cpp  5-1.cpp  5-2.cpp  5-3.cpp  6-1.cpp  6-2.cpp  6-3.cpp  6-4.cpp  CMakeLists.txt  matrix1.txt
