cmake_minimum_required(VERSION 3.20)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm
        2-1.cpp
        2-2.cpp
        2-3.cpp
        2-4.cpp
        4-1.cpp
        4-2.cpp
        5-1.cpp
        5-2.cpp
        5-3.cpp
        6-1.cpp
        6-2.cpp
        6-3.cpp
        6-4.cpp)
